Removing the password

--- a/SalesforceProject/src/main/resources/Resources/Config/config.properties
+++ b/SalesforceProject/src/main/resources/Resources/Config/config.properties
@@ -2,6 +2,6 @@
 Browser=chrome
 URL=https://customization-customiza-1a0-dev-ed.cs10.my.salesforce.com/
 Username=guptaharshit1994-gmail.com@ta-candidate.cic.salesforce.com
-Password=U2FsZXNmb3JjZUAxMjM=
+Password=
 WaiTime= 10
 ReportFolder=C:\\User\\simpl\\OneDrive\\Desktop\\Salesforce1stRound\\SalesforceProject\\Reports
